--- a/xpi/content/css/win8/nav_txtonlyextra.css
+++ b/xpi/content/css/win8/nav_txtonlyextra.css
@@ -16,4 +16,9 @@
 	#navigator-toolbox #nav-bar  #bookmarks-menu-button .toolbarbutton-text{
 	  font-size: 12px !important;
 	}
+	#nav-bar #loop-call-button .toolbarbutton-badge-container{ 
+	  padding:0 !important;
+	  border:0 !important;
+	  box-shadow:none !important;
+	}
 }
