--- a/xpi/content/css/win8/nocontexticonsextra.css
+++ b/xpi/content/css/win8/nocontexticonsextra.css
@@ -30,5 +30,8 @@
 	#context-bookmarkpage:before{
 	  -moz-margin-start:32px !important;
 	}
+	#context-navigation{
+	  margin-bottom:-4px !important;
+	}
 
 }
