--- a/xpi/content/css/winaero/mode_icons_and_text_extra.css
+++ b/xpi/content/css/winaero/mode_icons_and_text_extra.css
@@ -60,5 +60,10 @@
 	#main-window toolbar #ctraddon_back-forward-dropmarker .toolbarbutton-icon {
 	  padding:0px 3px !important;
 	}
+	#nav-bar #loop-call-button .toolbarbutton-badge-container{ 
+	  padding:0 !important;
+	  border:0 !important;
+	  box-shadow:none !important;
+	}
 
 }
