--- a/xpi/content/css/invicons_navbar.css
+++ b/xpi/content/css/invicons_navbar.css
@@ -5,7 +5,8 @@
   @media not all and (min-resolution: 2dppx) {
 	
 	#nav-bar :-moz-any(#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button) .toolbarbutton-icon,
-	#nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button),
+	#nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #web-apps-button),
+	#nav-bar #panic-button:not([open]),
 	#nav-bar #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
 	  list-style-image: url(chrome://browser/skin/Toolbar-inverted.png) !important;
 	}
@@ -28,10 +29,6 @@
 	#nav-bar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-down {
 	  list-style-image: url(chrome://browser/skin/tabbrowser/tab-arrow-left-inverted.png) !important;
 	}
-	/*#nav-bar > #new-tab-button,
-	#nav-bar > toolbarpaletteitem > #new-tab-button {
-	  list-style-image: url(chrome://browser/skin/tabbrowser/newtab-inverted.png) !important;
-	}*/
 	#nav-bar > #alltabs-button,
 	#nav-bar > toolbarpaletteitem > #alltabs-button {
 	  list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow-inverted.png") !important;
@@ -59,6 +56,9 @@
 	#nav-bar #ctraddon_history-button:not([cui-areatype="menu-panel"]),
 	#nav-bar #ctraddon_history-menu-toolbar-button:not([cui-areatype="menu-panel"]){
 	  -moz-image-region: rect(0, 180px, 18px, 162px) !important;
+	}
+	#nav-bar #loop-call-button:not([cui-areatype="menu-panel"]) > .toolbarbutton-badge-container {
+	  list-style-image: url(chrome://browser/skin/loop/toolbar-inverted.png) !important;
 	}
   }
 }
