--- a/xpi/content/css/invicons_tabsbar.css
+++ b/xpi/content/css/invicons_tabsbar.css
@@ -4,7 +4,8 @@
 @-moz-document url(chrome://browser/content/browser.xul) {
   @media not all and (min-resolution: 2dppx) {
 	#TabsToolbar :-moz-any(#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button) .toolbarbutton-icon,
-	#TabsToolbar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button),
+	#TabsToolbar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #web-apps-button),
+	#TabsToolbar #panic-button:not([open]),
 	#TabsToolbar #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
 	  list-style-image: url(chrome://browser/skin/Toolbar-inverted.png) !important;
 	}
@@ -26,15 +27,6 @@
 	#TabsToolbar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-up,
 	#TabsToolbar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-down {
 	  list-style-image: url(chrome://browser/skin/tabbrowser/tab-arrow-left-inverted.png) !important;
-	}
-	#main-window #navigator-toolbox #TabsToolbar #new-tab-button:not(:-moz-lwtheme),
-	#main-window #navigator-toolbox #TabsToolbar #new-tab-button,
-	#main-window #navigator-toolbox #TabsToolbar > toolbarpaletteitem > #new-tab-button {
-	  list-style-image: url(chrome://browser/skin/tabbrowser/newtab-inverted.png) !important;
-	}
-	#TabsToolbar > #alltabs-button,
-	#TabsToolbar > toolbarpaletteitem > #alltabs-button {
-	  list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow-inverted.png") !important;
 	}
 	#TabsToolbar #switch-to-metro-button[cui-areatype="toolbar"] {
 	  list-style-image: url(chrome://browser/skin/Metro_Glyph-inverted.png) !important;
@@ -59,6 +51,9 @@
 	#TabsToolbar #ctraddon_history-button:not([cui-areatype="menu-panel"]),
 	#TabsToolbar #ctraddon_history-menu-toolbar-button:not([cui-areatype="menu-panel"]){
 	  -moz-image-region: rect(0, 180px, 18px, 162px) !important;
+	}
+	#TabsToolbar #loop-call-button:not([cui-areatype="menu-panel"]) > .toolbarbutton-badge-container {
+	  list-style-image: url(chrome://browser/skin/loop/toolbar-inverted.png) !important;
 	}
   }
 }
