--- a/xpi/content/css/linux/smallnavbutextra.css
+++ b/xpi/content/css/linux/smallnavbutextra.css
@@ -50,39 +50,6 @@
       transition-duration: 0ms !important;
 	}
 	
-	/* star button in urlbar support */
-	#navigator-toolbox  #nav-bar #urlbar-container #bookmarks-menu-button {
-      -moz-appearance: none !important;
-      background: unset !important;
-      box-shadow: unset !important;
-	  border: unset !important;
-    }
-
-	#navigator-toolbox #nav-bar #urlbar-container #bookmarks-menu-button > .toolbarbutton-menubutton-button {
-	  -moz-appearance: none !important;
-	  padding: 0px 0px !important;
-	  background: none !important;
-	  border: 0px solid !important;
-	  margin: -8px 0 !important;
-	  box-shadow: none !important;
-	}
-	#navigator-toolbox #nav-bar #urlbar-container  #bookmarks-menu-button > .toolbarbutton-menubutton-button:not(.tabs-newtab-button):not(.tab-close-button):not([disabled]):hover > .toolbarbutton-icon {
-      background-image: linear-gradient(hsla(0,0%,100%,.0), hsla(0,0%,100%,.0)) !important;
-      border-color: hsla(210,54%,20%,.0) hsla(210,54%,20%,.0) hsla(210,54%,20%,.0) !important;
-      box-shadow: none !important;
-	}
-	
-	/* rss in urlbar addon */
-	#navigator-toolbox #nav-bar #urlbar-container #feed-button {
-      -moz-appearance: none !important;
-      background: unset !important;
-      box-shadow: unset !important;
-	  border: unset !important;
-      padding: unset !important;
-      margin: -8px 4px !important;
-    }
-	
-	
 	#nav-bar #notification-popup-box[hidden] + * {
 	  -moz-padding-start: 2px !important;
 	  transition: none !important;
@@ -164,9 +131,10 @@
 	  height: auto !important;
 	}
 	
-	/*Jetpacks toggle button support*/
-	toolbarbutton[id^="toggle-button-"] .toolbarbutton-icon {
-	  width:22px !important;
+	/*Jetpacks toggle & action buttons support*/
+	#nav-bar toolbarbutton[id^="action-button-"] .toolbarbutton-icon,
+	#nav-bar toolbarbutton[id^="toggle-button-"] .toolbarbutton-icon {
+	  width:18px !important;
 	}
 
 	/* The Fox, only better add-on support*/
