--- a/xpi/content/css/mac/invicons_tabsbarextra.css
+++ b/xpi/content/css/mac/invicons_tabsbarextra.css
@@ -4,7 +4,8 @@
 
 	@media (min-resolution: 2dppx) {
 
-	  #TabsToolbar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #restore-button),
+	  #TabsToolbar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #restore-button, #web-apps-button),
+	  #TabsToolbar #panic-button:not([open]),
 	  #TabsToolbar #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
 		list-style-image: url("chrome://browser/skin/Toolbar-inverted@2x.png") !important;
 	  }
@@ -32,7 +33,11 @@
 	  #TabsToolbar :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button) > .toolbarbutton-icon  {
 		list-style-image: url("chrome://browser/skin/Toolbar-inverted@2x.png") !important;
 	  }
-		  
+	  
+	  #TabsToolbar  #loop-call-button > .toolbarbutton-badge-container {
+		list-style-image: url("chrome://browser/skin/loop/toolbar-inverted@2x.png") !important;
+	  }
+
 	  #TabsToolbar #ctraddon_back-button > .toolbarbutton-icon {
 		-moz-image-region: rect(0, 108px, 36px, 72px) !important;
 	  }
@@ -83,6 +88,7 @@
 	  #TabsToolbar #ctraddon_stop-button:hover:active:not([disabled="true"]) > .toolbarbutton-icon {
 		-moz-image-region: rect(36px, 216px, 72px, 180px) !important;
 	  }
+	  
 	  #TabsToolbar :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button,#ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button) > .toolbarbutton-icon {
 		width: 18px !important;
 	  }
@@ -120,6 +126,15 @@
 	  #navigator-toolbox #TabsToolbar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-up:-moz-locale-dir(rtl) {
 		list-style-image: url("chrome://browser/skin/tabbrowser/tab-arrow-right-inverted.png") !important;
 	  }
+	  #TabsToolbar #new-tab-button {
+		list-style-image: url(chrome://browser/skin/Toolbar-inverted.png) !important;
+	  }
+	  #main-window #navigator-toolbox #TabsToolbar #new-tab-button:not(:-moz-lwtheme),
+	  #main-window #navigator-toolbox #TabsToolbar #new-tab-button,
+	  #main-window #navigator-toolbox #TabsToolbar > toolbarpaletteitem > #new-tab-button {
+		list-style-image: url(chrome://browser/skin/tabbrowser/newtab-inverted.png) !important;
+	  }
+
 	  #navigator-toolbox #TabsToolbar #alltabs-button,
 	  #navigator-toolbox #TabsToolbar > toolbarpaletteitem > #alltabs-button  {
 		list-style-image: url(chrome://browser/skin/tabbrowser/alltabs-box-bkgnd-icon-inverted.png) !important;
