--- a/xpi/content/css/nocontexticons.css
+++ b/xpi/content/css/nocontexticons.css
@@ -11,5 +11,9 @@
   #context-sep-navigation {
 	display:none !important;
   }
+  
+  #ctraddon_connavsep {
+    visibility:visible !important;
+  }
 
 }
