--- a/xpi/content/css/tabsontop_off.css
+++ b/xpi/content/css/tabsontop_off.css
@@ -3,7 +3,7 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 
-	/* toolbars above navigator-toolbox (only one at a time can visible anyway) */
+	/* toolbars above navigator-toolbox (only one at a time can be visible anyway) */
 	#print-preview-toolbar,
 	#printedit-toolbar,
 	#titlebar {
@@ -17,7 +17,9 @@
 	#navigator-toolbox #nav-bar {
 	  -moz-box-ordinal-group: 2 !important;
 	}
-	#navigator-toolbox #ctraddon_extra-bar {
+	#navigator-toolbox #ctraddon_extra-bar,
+	#navigator-toolbox #ctraddon_extra-bar2,
+	#navigator-toolbox #ctraddon_extra-bar3 {
 	  -moz-box-ordinal-group: 3 !important;
 	}
 	#navigator-toolbox #PersonalToolbar {
