--- a/xpi/content/css/win8/tabsontop_offextra.css
+++ b/xpi/content/css/win8/tabsontop_offextra.css
@@ -2,7 +2,7 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 
-	#main-window[defaultfxtheme="true"][tabsontop="false"][sizemode="normal"]  #TabsToolbar:not(:-moz-lwtheme) {
+	#main-window[defaultfxtheme="true"][tabsontop="false"][sizemode="normal"] #TabsToolbar:not(:-moz-lwtheme) {
 	  border-left: 1px solid hsla(209,67%,12%,0.35) !important;
 	  border-right: 1px solid hsla(209,67%,12%,0.35) !important;
 	  background-clip: padding-box !important;
@@ -35,6 +35,10 @@
 	
 	#main-window[defaultfxtheme="true"] #TabsToolbar:not(:-moz-lwtheme){
 	  background: -moz-Dialog !important;
+	}
+	
+	#main-window[defaultfxtheme="true"][fx32plus="true"][tabsontop="false"] #TabsToolbar:not(:-moz-lwtheme) {
+	  border-bottom: 1px solid hsla(209,67%,12%,0.25) !important;
 	}
 
 }
