--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -25,6 +25,46 @@
 	  border-top:1px solid rgba(0,0,0,.0) !important;
 	  border-bottom:1px solid rgba(0,0,0,.5) !important;
 	}
+	
+	#ctraddon_placesContext_openInPrivatewindow,
+	#ctraddon_connavsep {
+	  visibility:collapse;
+	}
+
+	/* PanelUI-CTR-button */
+	#ctraddon_PanelUI-CTR-button,
+	#ctraddon_PanelUI-CTR-button-separator{
+	  visibility: collapse;
+	}
+	
+	#ctraddon_PanelUI-CTR-button {
+	  margin: 0;
+	  padding: 11px 0;
+	  box-sizing: border-box;
+	  min-height: 40px;
+	  -moz-appearance: none;
+	  box-shadow: none;
+	  border: none;  
+	  border-radius: 0;
+	  transition: background-color;
+	  -moz-box-orient: horizontal;
+	}
+
+	#ctraddon_PanelUI-CTR-button > .toolbarbutton-text {
+	  display: none;
+	}
+	#ctraddon_PanelUI-CTR-button > .toolbarbutton-icon {
+	  -moz-margin-end: 0;
+	}
+	#ctraddon_PanelUI-CTR-button:not([disabled]):hover{
+	  outline: 1px solid hsla(210,4%,10%,.07);
+	  background-color: hsla(210,4%,10%,.07);
+	}
+	#ctraddon_PanelUI-CTR-button:not([disabled]):hover:active {
+	  outline: 1px solid hsla(210,4%,10%,.12);
+	  background-color: hsla(210,4%,10%,.12);
+	  box-shadow: 0 1px 0 hsla(210,4%,10%,.05) inset;
+	}
 
 	/* CTRs Back-forward dropmarker */
 	#ctraddon_back-forward-dropmarker  > .toolbarbutton-icon{
@@ -169,9 +209,12 @@
 	#appmenu-popup #appmenu-paste{
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_paste.png");
 	}
+	#ctraddon_ctr-button,
+	#ctraddon_PanelUI-CTR-button,
 	#ctraddon_context_menu_entry,
 	#ctraddon_tools_menu_entry,
-	#appmenu-popup #ctraddon_appmenu_ctr{
+	#appmenu-popup #ctraddon_appmenu_ctr,
+	#appmenu-popup #ctraddon_appmenu_ctr2{
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_ctr.png");
 	}
 
@@ -189,6 +232,10 @@
 	#appmenu-popup #appmenu-editmenu{
 	  margin-top: 2px;
 	  margin-bottom: 2px;
+	}
+	
+	#main-window:not([fx31="true"]) #appmenu_eyedropper {
+	  display: none !important;
 	}
 
 	/* remove empty appmenu menu button labels */
@@ -281,8 +328,8 @@
 	#main-window[defaultfxtheme="true"] toolbarpaletteitem[place="palette"] > #ctraddon_stop-button > .toolbarbutton-icon,
 	#ctraddon_stop-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
 	toolbarpaletteitem[place="palette"] > #ctraddon_stop-button > .toolbarbutton-icon {
-	  -moz-image-region: rect(0px, 96px, 32px, 64px) !important;
-	  list-style-image: url(chrome://classic_theme_restorer/content/images/menuPanel.png);
+	  -moz-image-region: rect(0px, 96px, 32px, 64px);
+	  list-style-image: url(chrome://browser/skin/menuPanel.png);
 	}
 
 	#main-window[defaultfxtheme="true"] #ctraddon_reload-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
@@ -290,7 +337,7 @@
 	#ctraddon_reload-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
 	toolbarpaletteitem[place="palette"] > #ctraddon_reload-button > .toolbarbutton-icon{
 	  -moz-image-region: rect(0px, 64px, 32px, 32px);
-	  list-style-image: url(chrome://classic_theme_restorer/content/images/menuPanel.png);
+	  list-style-image: url(chrome://browser/skin/menuPanel.png);
 	}
 
 	#main-window[defaultfxtheme="true"] #ctraddon_history-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
@@ -330,6 +377,12 @@
 	#ctraddon_bookmarks-menu-toolbar-button[cui-areatype="menu-panel"],
 	#ctraddon_history-menu-toolbar-button[cui-areatype="menu-panel"] {
       -moz-box-orient: vertical !important;
+	}
+	
+	#ctraddon_ctr-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+	toolbarpaletteitem[place="palette"] > #ctraddon_ctr-button > .toolbarbutton-icon{
+	  -moz-image-region: rect(0px, 32px, 32px, 0);
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/palette_ctr.png);
 	}
 	
 	/* CTRs activity throbber */
@@ -378,6 +431,16 @@
 	/* Multirow Bookmarks Toolbar Plus v1.2 glitch fix */
 	#browser-bottombox #ctraddon_addon-bar:not([collapsed="true"]):not([hidden="true"])~#multibmtoolbar-showbar {
 	  visibility: hidden !important;
+	}
+	
+	/* Extra toolbars */
+	#toggle_ctraddon_extra-bar,
+	#ctraddon_extra-bar,
+	#toggle_ctraddon_extra-bar2,
+	#ctraddon_extra-bar2,
+	#toggle_ctraddon_extra-bar3,
+	#ctraddon_extra-bar3{
+	  visibility:collapse;
 	}
 
 }
@@ -435,7 +498,7 @@
 	}
 	
 	.ctraddonsuboption{
-	  -moz-padding-start:20px;
+	  -moz-padding-start:21px;
 	}
 	
 	#ClassicTRoptionsPane[defaultfxtheme="true"] .ctraddontabs{
