--- a/xpi/content/css/linux/smallnavbutextra.css
+++ b/xpi/content/css/linux/smallnavbutextra.css
@@ -141,5 +141,10 @@
 	#navigator-toolbox[slimChrome="true"] #nav-bar{
 	  padding-bottom:2px !important;
 	}
+	
+	/* Disconnect */
+	#nav-bar #disconnect-item #disconnect-badge{
+	  margin-top:6px !important;
+	}
 
 }
