--- a/xpi/content/css/winaero/smallnavbutextra.css
+++ b/xpi/content/css/winaero/smallnavbutextra.css
@@ -229,6 +229,11 @@
 	#navigator-toolbox[slimChrome="true"] #nav-bar{
 	  padding-bottom:2px !important;
 	}
+	
+	/* Disconnect */
+	#nav-bar #disconnect-item #disconnect-badge{
+	  margin-top:6px !important;
+	}
 
 	/* zoom page add-on */
     #navigator-toolbox #nav-bar #zoompage-zoomdisplay-s,
