--- a/xpi/content/css/winxp/smallnavbutextra.css
+++ b/xpi/content/css/winxp/smallnavbutextra.css
@@ -174,6 +174,12 @@
 	#navigator-toolbox[slimChrome="true"] #nav-bar{
 	  padding-bottom:2px !important;
 	}
+	
+	/* Disconnect */
+	#nav-bar #disconnect-item #disconnect-badge{
+	  margin-top:6px !important;
+	}
+
 	/* zoom page add-on */
     #navigator-toolbox #nav-bar #zoompage-zoomdisplay-s,
     #navigator-toolbox #nav-bar #zoompage-zoomin-s,
