--- a/xpi/content/css/mac/mode_icons_and_text_extra.css
+++ b/xpi/content/css/mac/mode_icons_and_text_extra.css
@@ -72,7 +72,7 @@
 	  margin-top: 0px !important;
 	}
 
-	#ctraddon_extra-bar {
+	toolbar[id^=ctraddon_extra-bar] {
 	  padding-bottom: 3px !important;
 	}
 	
