--- a/xpi/content/css/invicons_extrabar.css
+++ b/xpi/content/css/invicons_extrabar.css
@@ -3,60 +3,60 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
   @media not all and (min-resolution: 2dppx) {
-	#ctraddon_extra-bar :-moz-any(#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button) .toolbarbutton-icon,
-	#ctraddon_extra-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #web-apps-button),
-	#ctraddon_extra-bar #panic-button:not([open]),
-	#ctraddon_extra-bar #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
+	toolbar[id^=ctraddon_extra-bar] :-moz-any(#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button) .toolbarbutton-icon,
+	toolbar[id^=ctraddon_extra-bar] :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #web-apps-button),
+	toolbar[id^=ctraddon_extra-bar] #panic-button:not([open]),
+	toolbar[id^=ctraddon_extra-bar] #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
 	  list-style-image: url(chrome://browser/skin/Toolbar-inverted.png) !important;
 	}
-	#ctraddon_extra-bar #sync-button[status="active"],
-	#ctraddon_extra-bar #sync-button[status="active"]:hover:active:not([disabled="true"]) {
+	toolbar[id^=ctraddon_extra-bar] #sync-button[status="active"],
+	toolbar[id^=ctraddon_extra-bar] #sync-button[status="active"]:hover:active:not([disabled="true"]) {
 	  list-style-image: url("chrome://browser/skin/syncProgress-toolbar-inverted.png") !important;
 	}
-	#ctraddon_extra-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon {
+	toolbar[id^=ctraddon_extra-bar] #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon {
 	  background: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted.png"),
 								  0, 198, 18, 180) center no-repeat !important;
 	}
-	#ctraddon_extra-bar #downloads-button:not([counter]):not([attention]) > #downloads-indicator-anchor > #downloads-button-progress-area > #downloads-indicator-counter {
+	toolbar[id^=ctraddon_extra-bar] #downloads-button:not([counter]):not([attention]) > #downloads-indicator-anchor > #downloads-button-progress-area > #downloads-indicator-counter {
 	  background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted.png"), 0, 198, 18, 180) !important;
 	}
-	#ctraddon_extra-bar .toolbarbutton-1 > .toolbarbutton-menu-dropmarker,
-	#ctraddon_extra-bar .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker {
+	toolbar[id^=ctraddon_extra-bar] .toolbarbutton-1 > .toolbarbutton-menu-dropmarker,
+	toolbar[id^=ctraddon_extra-bar] .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker {
 	  list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow-inverted.png") !important;
 	}
-	#ctraddon_extra-bar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-up,
-	#ctraddon_extra-bar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-down {
+	toolbar[id^=ctraddon_extra-bar] > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-up,
+	toolbar[id^=ctraddon_extra-bar] > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-down {
 	  list-style-image: url(chrome://browser/skin/tabbrowser/tab-arrow-left-inverted.png) !important;
 	}
-	#ctraddon_extra-bar > #alltabs-button,
-	#ctraddon_extra-bar > toolbarpaletteitem > #alltabs-button {
+	toolbar[id^=ctraddon_extra-bar] > #alltabs-button,
+	toolbar[id^=ctraddon_extra-bar] > toolbarpaletteitem > #alltabs-button {
 	  list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow-inverted.png") !important;
 	}
-	#ctraddon_extra-bar #switch-to-metro-button[cui-areatype="toolbar"] {
+	toolbar[id^=ctraddon_extra-bar] #switch-to-metro-button[cui-areatype="toolbar"] {
 	  list-style-image: url(chrome://browser/skin/Metro_Glyph-inverted.png) !important;
 	}
 	
-	#ctraddon_extra-bar #ctraddon_back-button:not([cui-areatype="menu-panel"]) {
+	toolbar[id^=ctraddon_extra-bar] #ctraddon_back-button:not([cui-areatype="menu-panel"]) {
 	  -moz-image-region: rect(0, 54px, 18px, 36px) !important;
 	}
-	#ctraddon_extra-bar #ctraddon_forward-button:not([cui-areatype="menu-panel"]) {
+	toolbar[id^=ctraddon_extra-bar] #ctraddon_forward-button:not([cui-areatype="menu-panel"]) {
 	  -moz-image-region: rect(0, 72px, 18px, 54px) !important;
 	}
-	#ctraddon_extra-bar #ctraddon_stop-button:not([cui-areatype="menu-panel"]){
+	toolbar[id^=ctraddon_extra-bar] #ctraddon_stop-button:not([cui-areatype="menu-panel"]){
 	  -moz-image-region: rect(0, 108px, 18px, 90px) !important;
 	}
-	#ctraddon_extra-bar #ctraddon_reload-button:not([cui-areatype="menu-panel"]){
+	toolbar[id^=ctraddon_extra-bar] #ctraddon_reload-button:not([cui-areatype="menu-panel"]){
 	  -moz-image-region: rect(0, 90px, 18px, 72px) !important;
 	}
-	#ctraddon_extra-bar #ctraddon_bookmarks-menu-toolbar-button:not([cui-areatype="menu-panel"]),
-	#ctraddon_extra-bar #ctraddon_bookmarks-button:not([cui-areatype="menu-panel"]) {
+	toolbar[id^=ctraddon_extra-bar] #ctraddon_bookmarks-menu-toolbar-button:not([cui-areatype="menu-panel"]),
+	toolbar[id^=ctraddon_extra-bar] #ctraddon_bookmarks-button:not([cui-areatype="menu-panel"]) {
 	  -moz-image-region: rect(0, 162px, 18px, 144px) !important;
 	}
-	#ctraddon_extra-bar #ctraddon_history-button:not([cui-areatype="menu-panel"]),
-	#ctraddon_extra-bar #ctraddon_history-menu-toolbar-button:not([cui-areatype="menu-panel"]){
+	toolbar[id^=ctraddon_extra-bar] #ctraddon_history-button:not([cui-areatype="menu-panel"]),
+	toolbar[id^=ctraddon_extra-bar] #ctraddon_history-menu-toolbar-button:not([cui-areatype="menu-panel"]){
 	  -moz-image-region: rect(0, 180px, 18px, 162px) !important;
 	}
-	#ctraddon_extra-bar #loop-call-button:not([cui-areatype="menu-panel"]) > .toolbarbutton-badge-container {
+	toolbar[id^=ctraddon_extra-bar] #loop-call-button:not([cui-areatype="menu-panel"]) > .toolbarbutton-badge-container {
 	  list-style-image: url(chrome://browser/skin/loop/toolbar-inverted.png) !important;
 	}
   }
