--- a/xpi/content/css/mac/smallnavbutextra.css
+++ b/xpi/content/css/mac/smallnavbutextra.css
@@ -68,6 +68,12 @@
 	#nav-bar #urlbar-container #back-button:not([cui-areatype="menu-panel"]) {
 	  -moz-image-region: rect(0, 54px, 18px, 36px) !important;
 	}
+	/*retina display*/
+	@media (min-resolution: 2dppx) {
+		#nav-bar #urlbar-container #back-button:not([cui-areatype="menu-panel"]) {
+		  -moz-image-region: rect(0, 108px, 36px, 72px) !important;
+		}
+	}
 
 	#nav-bar #urlbar-container #forward-button[disabled]{
 	  visibility: visible !important;
