--- a/xpi/content/css/tabsontop_off2.css
+++ b/xpi/content/css/tabsontop_off2.css
@@ -16,7 +16,7 @@
 	#navigator-toolbox #nav-bar {
 	  -moz-box-ordinal-group: 2 !important;
 	}
-	#navigator-toolbox #ctraddon_extra-bar {
+	#navigator-toolbox toolbar[id^=ctraddon_extra-bar] {
 	  -moz-box-ordinal-group: 3 !important;
 	}
 	#navigator-toolbox #PersonalToolbar {
